# Renderer

./: .gitignore  CMakeLists.txt  InputsExplained.txt  Main.cpp  NoBVHPerf.txt  Platform_common.cpp  README.md  Renderer.aps  Renderer.cpp  Renderer.rc  Renderer.vcxproj  Renderer.vcxproj.filters  Utility.cpp  Window.cpp  perflog.txt  resource.h  resource.rc
Debug/: vc143.idb
Debug/Renderer.tlog/: Renderer.lastbuildstate
Libraries/GLAD/include/glad/: glad.h
Libraries/GLAD/src/: glad.c
src/: BUILDGUIDE.txt  Build.bat  Colour.h  Globals.cpp  Globals.h  Hash.h  Image.ppm  Logging.h  Main.cpp  Main.h  Matrix4.h  Note.txt  Object.h  Platform_common.cpp  Platform_common.h  Renderer.cpp  Renderer.h  Renderer.vcxproj  Renderer.vcxproj.filters  Scene.h  SceneSettings.h  Timer.h  Transform.h  Typedefs.h  Utility.cpp  Utility.h  Vector.cpp  Vector.h  Vector4.h  Window.cpp  Window.h  build-no-icon.bat  resource.h
x64/Debug/: Renderer.exe.recipe  Renderer.ilk  Renderer.res  vc143.idb  window.obj.enc
x64/Debug/Renderer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Renderer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
x64/Release/: Renderer.exe.recipe  Renderer.iobj  Renderer.ipdb
x64/Release/Renderer.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  Renderer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
